--- a/views/update-profile-admin.ejs
+++ b/views/update-profile-admin.ejs
@@ -5,42 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homehub - Find your dream house</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
-<style>
-  .header-bottom-actions {
-    display: flex;
-    justify-content: center;
-}
-
-.header-bottom-actions-btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    text-decoration: none; /* Optional: remove underline */
-    margin: 0 10px; /* Adjust spacing between buttons */
-}
-
-.header-bottom-actions-btn ion-icon {
-    margin-bottom: 5px; /* Adjust as needed */
-}
-</style>
-  <!-- 
-    - favicon
-  -->
-  <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml">
-
-  <!-- 
-    - custom css link
-  -->
-  <link rel="stylesheet" href="/css/style.css">
-
-  <!-- 
-    - google font link
-  -->
+  <title>HomeHub - <%= user ? user.role : '' %></title>
+  <style>
+    .header-bottom-actions {
+      display: flex;
+      justify-content: center;
+  }
+  
+  .header-bottom-actions-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      text-decoration: none; /* Optional: remove underline */
+      margin: 0 10px; /* Adjust spacing between buttons */
+  }
+  
+  .header-bottom-actions-btn ion-icon {
+      margin-bottom: 5px; /* Adjust as needed */
+  }
+  </style>
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -72,17 +58,23 @@
           </li> -->
 
           <li>
-            <a href="/view/<%= user._id %>" class="header-top-link">
-              <!-- <ion-icon name="location-outline"></ion-icon> -->
+            <a href="/administrator" class="header-top-link">
+              <ion-icon name=""></ion-icon>
 
-              <span><%= greeting %>, <%= user ? user.role : '' %> | <%= user ? user.username : '' %></span>
+              <span><%= greeting %> Administrator | <%= user ? user.username : '' %>
+                <% if (sudo) { %>
+                  <p>(Owner)</p>
+              <% } else { %>
+                  <p></p> <!-- Empty paragraph -->
+              <% } %>
+              </span>
             </a>
           </li>
 
         </ul>
 
         <div class="wrapper">
-          <!-- <ul class="header-top-social-list">
+          <ul class="header-top-social-list">
 
             <li>
               <a href="#" class="header-top-social-link">
@@ -104,16 +96,17 @@
 
             <li>
               <a href="#" class="header-top-social-link">
-                <ion-icon name="logo-telegram"></ion-icon>
+                <ion-icon name="logo-pinterest"></ion-icon>
               </a>
             </li>
 
-          </ul> -->
+          </ul>
+
           <form action="/logout" method="get">
-          <button class="header-top-btn">
-            <i class="fas fa-sign-out-alt"></i> Logout
-          </button>
-          </form>
+            <button class="header-top-btn">
+              <i class="fas fa-sign-out-alt"></i> Logout
+            </button>
+            </form>
         </div>
 
       </div>
@@ -121,28 +114,18 @@
 
     <div class="header-bottom">
       <div class="container">
-
-        <!-- <a href="/home" class="logo">
-          <img style="width: 50%;" src="./images/hub.jpg" alt="Homeverse logo">
-        </a> -->
-
-        <a href="/home" class="logo">
-          <img src="/images/hub1.png" alt="Homehub logo">
-        </a>
         
-        <!-- <a href="/home" class="logo">
-          <img src="./images/hub1.png" alt="Homehub logo">
-          <div class="main">HomeHub</div>
-          <div class="sub">housing agency</div>
-        </a> -->
+        <a href="/admin-home" class="logo">
+          <img src="/images/hub.png" alt="Homehub logo">
+        </a>
 
         <nav class="navbar" data-navbar>
 
           <div class="navbar-top">
-
+<!-- 
             <a href="#" class="logo">
-              <img src="/images/hub1.png" alt="Homeverse logo">
-            </a>
+              <img src="./images/homehub-logo.jpg" alt="Homehub logo">
+            </a> -->
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
               <ion-icon name="close-outline"></ion-icon>
@@ -154,27 +137,27 @@
             <ul class="navbar-list">
 
               <li>
-                <a href="/home" class="navbar-link" data-nav-link>Home</a>
+                <a href="/admin-home" class="navbar-link" data-nav-link>Home</a>
               </li>
 
               <li>
-                <a href="/all-properties" class="navbar-link" data-nav-link>Properties</a>
+                <a href="/all-admin-properties" class="navbar-link" data-nav-link>Apartments</a>
               </li>
 
               <li>
-                <a href="/my-post" class="navbar-link" data-nav-link>My Posts</a>
+                <a href="/admin-about" class="navbar-link" data-nav-link>About</a>
               </li>
 
               <li>
-                <a href="/service" class="navbar-link" data-nav-link>Service</a>
+                <a href="/admin-service" class="navbar-link" data-nav-link>Service</a>
               </li>
-<!-- 
-              <li>
-                <a href="/blog" class="navbar-link" data-nav-link>Blog</a>
+
+              <!-- <li>
+                <a href="/admin-blog" class="navbar-link" data-nav-link>Blog</a>
               </li> -->
 
               <li>
-                <a href="/contact" class="navbar-link" data-nav-link>Contact</a>
+                <a href="/admin-contact" class="navbar-link" data-nav-link>Contact</a>
               </li>
 
             </ul>
@@ -184,27 +167,22 @@
 
         <div class="header-bottom-actions">
 
-          <button class="header-bottom-actions-btn" aria-label="Search"><a href="/search">
+          <button class="header-bottom-actions-btn" aria-label="Search"><a href="/search-admin">
             <ion-icon name="search-outline"></ion-icon>
           </a>
             <span>Search</span>
           </button>
 
-          <!-- <button class="header-bottom-actions-btn" aria-label="Profile">
-            <ion-icon name="person-outline"></ion-icon>
-
-            <span>Profile</span>
-          </button> -->
-
           <a href="/view/<%= user._id %>" class="header-bottom-actions-btn" aria-label="Profile">
             <ion-icon name="person-outline"></ion-icon>
             <span>Profile</span>
-          </a>
+        </a>
+        
+          <button class="header-bottom-actions-btn" aria-label="Cart">
+            <ion-icon name="cart-outline"></ion-icon>
 
-          <a href="/all-properties" class="header-bottom-actions-btn" aria-label="Home">
-            <ion-icon name="home-outline"></ion-icon>
-            <span>Properties</span>
-          </a>
+            <span>Cart</span>
+          </button>
 
           <button class="header-bottom-actions-btn" data-nav-open-btn aria-label="Open Menu">
             <ion-icon name="menu-outline"></ion-icon>
@@ -219,8 +197,9 @@
 
   </header>
 
+
 <!-- include post-apartment -->
-<%- include('include/_update-profile') %>
+<%- include('include/_update-profile-admin') %>
 <!-- /include post-apartment -->
 
   <!-- include style -->
