--- a/views/view.ejs
+++ b/views/view.ejs
@@ -64,7 +64,9 @@
               <!-- <li><a href="">galleries</a></li> -->
               <!-- <li><a href="#">home</a></li> -->
             </ul>
-            <!-- <button>Follow</button> -->
+            <form action="/update-profile/<%= users._id %>">
+            <button>Edit</button>
+          </form>
           </nav>
 
           <div class="photos">
@@ -74,63 +76,62 @@
             <img src="/images/img_4.avif" alt="Photo" />
             <img src="/images/img_5.avif" alt="Photo" />
             <img src="/images/img_6.avif" alt="Photo" /> -->
-            <ul class="property-list has-scrollbar">
-              <% apartments.forEach(apt => { %>
-                <li class="property-item">
-                  <div class="property-card">
-            
-                    <div class="card-content">
-                      <div class="card-price">
-                        <strong><%= apt.currency %> <%= apt.price.toLocaleString('en-US', { maximumFractionDigits: 2 }) %></strong><%= apt.duration %> <pre><%= apt.negotiation %></pre>
-                      </div>
-                      <h3 class="h3 card-title">
-                        <a href="/apartment-detail/<%= apt._id %>"><%= apt.title %></a>
-                      </h3>
-                      <p class="card-text">
-                        <% if (apt.description && apt.description.length > 150) { %>
-                          <%= apt.description.substring(0, 150) + "..." %>
-                        <% } else { %>
-                          <%= apt.description %>
-                        <% } %>
-                      </p>
-                      <ul class="card-list">
-                        <li class="card-item">
-                          <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
-                          <a href="/apartment-detail/<%= apt._id %>">
-                            <span>View Details</span>
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="card-footer">
-                      <div class="card-author">
-                        <div>
-                          <p class="author-name"> Created by:
-                            <a href="#"><%= apt.createdBy %></a>
-                          </p>
-                          <p class="author-title">
-                            Created At: <%= apt.formattedCreatedAt %> (<%= apt.daysAgo %> days ago)
-                          </p>
-                        </div>
-                      </div>
-                      <div class="card-footer-actions">
-                        <a href="/update-apartment/<%= apt._id %>" class="card-footer-actions-btn" title="Edit">
-                          <ion-icon name="create-outline"></ion-icon>
-                        </a>
-                        <form action="/apartments/<%= apt._id %>?_method=DELETE" method="POST" style="display:inline;">
-                          <button type="submit" class="card-footer-actions-btn" title="Delete">
-                            <ion-icon name="trash-outline"></ion-icon>
-                          </button>
-                        </form>
-                      </div>
-                      
-                    </div>
-                  </div>
-                </li>
-              <% }); %>
-            </ul>
-            
           <!-- </div> -->
+          <ul class="property-list has-scrollbar">
+            <% apartments.forEach(apt => { %>
+              <li class="property-item">
+                <div class="property-card">
+          
+                  <div class="card-content">
+                    <div class="card-price">
+                      <strong><%= apt.currency %> <%= apt.price.toLocaleString('en-US', { maximumFractionDigits: 2 }) %></strong><%= apt.duration %> <pre><%= apt.negotiation %></pre>
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="/apartment-detail/<%= apt._id %>"><%= apt.title %></a>
+                    </h3>
+                    <p class="card-text">
+                      <% if (apt.description && apt.description.length > 150) { %>
+                        <%= apt.description.substring(0, 150) + "..." %>
+                      <% } else { %>
+                        <%= apt.description %>
+                      <% } %>
+                    </p>
+                    <ul class="card-list">
+                      <li class="card-item">
+                        <strong>Apartment ID (AID): AID<%= apt.aid %></strong>
+                        <a href="/apartment-detail/<%= apt._id %>">
+                          <span>View Details</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <div class="card-author">
+                      <div>
+                        <p class="author-name"> Created by:
+                          <a href="#"><%= apt.createdBy %></a>
+                        </p>
+                        <p class="author-title">
+                          Created At: <%= apt.formattedCreatedAt %> (<%= apt.daysAgo %> days ago)
+                        </p>
+                      </div>
+                    </div>
+                    <div class="card-footer-actions">
+                      <a href="/update-apartment/<%= apt._id %>" class="card-footer-actions-btn" title="Edit">
+                        <ion-icon name="create-outline"></ion-icon>
+                      </a>
+                      <form action="/apartments/<%= apt._id %>?_method=DELETE" method="POST" style="display:inline;">
+                        <button type="submit" class="card-footer-actions-btn" title="Delete">
+                          <ion-icon name="trash-outline"></ion-icon>
+                        </button>
+                      </form>
+                    </div>
+                    
+                  </div>
+                </div>
+              </li>
+            <% }); %>
+          </ul>
         </div>
       </div>
     </div>
