--- a/views/include/_post-apartment.ejs
+++ b/views/include/_post-apartment.ejs
@@ -167,8 +167,8 @@
 
       <div class="formbold-mb-3">
         <label for="address" class="formbold-form-label"> Address: </label>
-        <input type="text" name="address" id="address" placeholder="Street address" class="formbold-form-input" />
-        <input type="text" name="address2" id="address2" placeholder="Street address line 2" class="formbold-form-input" />
+        <input type="text" name="address" id="address" placeholder="Enter Apartment Address" class="formbold-form-input" />
+        <input type="text" name="address2" id="address2" placeholder="Enter Landmark or Nearest Bus stop" class="formbold-form-input" />
       </div>
 
       <div class="formbold-mb-3">
