--- a/views/include/_update-profile.ejs
+++ b/views/include/_update-profile.ejs
@@ -93,7 +93,7 @@
 
         <div class="formbold-mb-3">
             <label for="bio" class="formbold-form-label"> Bio: </label>
-            <textarea rows="6" name="bio" id="bio" class="formbold-form-input"><%= users.bio %></textarea>
+            <textarea rows="6" name="bio" id="bio" placeholder="Add bio..." class="formbold-form-input"><%= users.bio %></textarea>
           </div>
 
       <button type="submit" class="formbold-btn">Update</button>
