--- a/views/include/_all-users.ejs
+++ b/views/include/_all-users.ejs
@@ -138,7 +138,7 @@
                     <!-- Add icons with links to your delete, view, and update routes -->
                     <a href="/edit-user/<%= user._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteUser('<%= user._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
-                    <a href="/view-admin-only/<%= user._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
+                    <a href="/view/<%= user._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
             </tr>
