--- a/views/view-apt.ejs
+++ b/views/view-apt.ejs
@@ -83,7 +83,7 @@
             </div>
             <div class="col text-end fw-lighter">
                 <b>Last Updated <%= new Date(apartment.updatedAt).toUTCString() %> </b>
-                <b>ApartmentId:</b> <%= apartment._id %>
+                <!-- <b>ApartmentId:</b>  apartment._id  -->
             </div>
         </div>
     </div>
