--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -127,7 +127,7 @@
         </a> -->
 
         <a href="/home" class="logo">
-          <img src="./images/hub1.png" alt="Homehub logo">
+          <img src="./images/hub.png" alt="Homehub logo">
         </a>
         
         <!-- <a href="/home" class="logo">
@@ -141,7 +141,7 @@
           <div class="navbar-top">
 
             <a href="#" class="logo">
-              <img src="./images/hub1.png" alt="Homeverse logo">
+              <img src="./images/hub.png" alt="Homehubsl logo">
             </a>
 
             <button class="nav-close-btn" data-nav-close-btn aria-label="Close Menu">
@@ -168,7 +168,7 @@
               <li>
                 <a href="/service" class="navbar-link" data-nav-link>Service</a>
               </li>
-<!-- 
+              <!--
               <li>
                 <a href="/blog" class="navbar-link" data-nav-link>Blog</a>
               </li> -->
