--- a/views/include/_apartment-detail.ejs
+++ b/views/include/_apartment-detail.ejs
@@ -136,8 +136,7 @@
                             Created At: <%= apartment.formattedCreatedAt %> (<%= apartment.daysAgo %> days ago)
                         </p>
                     </div>
-                    <div class="card-footer-actions">
-                        <!-- Action buttons (placeholders) -->
+                    <!-- <div class="card-footer-actions">
                         <button class="card-footer-actions-btn">
                             <ion-icon name="resize-outline"></ion-icon>
                         </button>
@@ -147,7 +146,7 @@
                         <button class="card-footer-actions-btn">
                             <ion-icon name="add-circle-outline"></ion-icon>
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
