--- a/public/css/apt-detail.css
+++ b/public/css/apt-detail.css
@@ -190,7 +190,9 @@ background: #512da8;
     position: absolute;
     /* top: 10px; */
     right: 1px;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
+  /* --orange-soda: hsl(9, 100%, 62%); */
+    background-color: var(--orange-soda);
     color: white;
     border: none;
     padding: 5px 10px;
